find_package(ament_cmake QUIET)
if(ament_cmake_FOUND)
  find_package(ament_cmake REQUIRED)
  find_package(rclcpp REQUIRED)
  find_package(geometry_msgs REQUIRED)
  find_package(sensor_msgs REQUIRED)
  add_subdirectory(controller)
else()
  message(STATUS "ament_cmake not found.")
endif()

install(DIRECTORY model project DESTINATION ${CNOID_SHARE_SUBDIR}/WRS2025)
